# readsme

./: .gitignore  README.md  books.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: readsme.yml
api/: index.py
readsme/: cli.py  colors.py  config.py  cover_renderer.py  covers.py  readme.py  renderer.py
server/: fallbacks.py  github.py
tests/: test_cover_renderer.py  test_renderer.py  test_server.py
